--- a/hello-playbook-redhat.yaml
+++ b/hello-playbook-redhat.yaml
@@ -1,7 +1,7 @@
 %YAML 1.2
 ---
 - name: Hello Ansible Playbook
-  hosts: all
+  hosts: redhats
   become: true
   tasks:
    - name: Example from an Ansible Playbook
