--- a/roles/webserver/tasks/debian.yml
+++ b/roles/webserver/tasks/debian.yml
@@ -3,6 +3,7 @@
   ansible.builtin.apt:
     name: "apache2"
     state: present
+    update_cache: true
 - name: Restart Service
   ansible.builtin.service:
     name: apache2
