--- a/roles/dbserver/tasks/main.yml
+++ b/roles/dbserver/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 # tasks file for dbserver
-- name: Install the correct web server for RHEL
+- name: Install the correct db server for RHEL
   import_tasks: redhat.yml
   when: ansible_facts['os_family']|lower == 'redhat'
 
-- name: Install the correct web server for Debian
+- name: Install the correct db server for Debian
   import_tasks: debian.yml
   when: ansible_facts['os_family']|lower == 'debian'
