--- a/roles/dbserver/tasks/redhat.yml
+++ b/roles/dbserver/tasks/redhat.yml
@@ -1,5 +1,5 @@
 # roles/example/tasks/redhat.yml
-- name: Install web server
+- name: Install db server
   ansible.builtin.yum:
     name: "mariadb-server"
     state: present
