--- a/roles/deploy/tasks/main.yml
+++ b/roles/deploy/tasks/main.yml
@@ -1,9 +1,18 @@
 ---
 # roles/example/tasks/main.yml
-- name: Install the correct web server for RHEL
+- name: Install Unzip
   import_tasks: redhat.yml
   when: ansible_facts['os_family']|lower == 'redhat'
 
-- name: Install the correct web server for Debian
+- name: Install Unzip
   import_tasks: debian.yml
   when: ansible_facts['os_family']|lower == 'debian'
+
+- name: Install 2048
+  ansible.builtin.unarchive:
+    src: "{{ artifact }}"
+    dest: /var/www/html
+    owner: root
+    group: root
+    mode: u=rwx,g=rx,o=rx
+
